Clean up AdjRibsInWriterTest a bit
Use Set.of()/Map.of() instead of mutable collections.

Change-Id: I230d7bb98f39e4c23d011a5fa946d7feb93a87d6
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>